test/sema/interface-impl-decl-error-generic-param.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:14: error: 'bool' is not an interface
struct Z<T>: T {}

void main() {
    var z = Z<bool>();
}
